--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>唯一ID</title>
+    <meta name="viewport" content="width=980">
+    <meta name="keywords" content="唯ID" />
+    <meta name="description" content="免费的短信验证码登录" />
+    <title>唯ID</title>
   </head>
   <body>
     <div id="app"></div>
