--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=980">
-    <meta name="keywords" content="唯ID, 短信验证码, 短信验证码登录, 手机号登录" />
-    <meta name="description" content="我们为app和网站提供简单、可信赖的手机号验证服务，可广泛应用于短信验证码登录、三方登录绑定手机号等场景" />
-    <title>唯ID - 简单、可信赖的手机号验证服务</title>
+    <meta name="keywords" content="唯ID, 手机账号, 短信验证码, 短信验证码登录, 手机号登录" />
+    <meta name="description" content="我们为app和网站提供共享的手机账号服务，可广泛应用于手机号登录、三方登录绑定手机等场景" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>唯ID</title>
   </head>
   <body>
     <div id="app"></div>
