frontend backend改成web server；改成免费；其他小改动

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=980">
     <meta name="keywords" content="唯ID, 手机账号, 短信验证码, 短信验证码登录, 手机号登录">
-    <meta name="description" content="我们为app和网站提供共享的手机账号服务，广泛应用于手机号登录、三方登录绑定手机等场景">
+    <meta name="description" content="我们为app和网站提供手机账号服务，广泛应用于手机号登录、三方登录绑定手机等场景">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>唯ID</title>
   </head>
