--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <link href="%PUBLIC_URL%/prism.css" rel="stylesheet" />
-    <script src="%PUBLIC_URL%/prism.js" ></script>
+    <link href="https://www.onlyid.net/static/css/prism.css" rel="stylesheet" />
+    <script src="https://www.onlyid.net/static/js/prism.js" ></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
