--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap">
     <link href="https://www.onlyid.net/static/css/prism.css" rel="stylesheet" />
     <script src="https://www.onlyid.net/static/js/prism.js" ></script>
     <!--
